tests/samples/invalid/comparison_on_arrays.pn
fn main() -> u8
{
	var result = 0;
	if [2, 3] == [2, 3]
	{
		result = 23;
	}
	return: result
}
